feat: Implement Pascal parser with AST generation and validation for Hello World programs

--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
         "ts-jest": "^29.1.2",
         "typedoc": "^0.25.8",
         "typescript": "^5.3.3"
+    },
+    "dependencies": {
+        "pascal-tokenizer": "^0.0.3"
     }
 }
